2009-03-23  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/AlbumArtistEntry.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/PageNavigationEntry.cs:
	Make the track artist sync button not sensitive when IsCompilation, and
	don't change the title forward button's sensitivity.

	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/SortingPage.cs:
	Make the title sort field NoSync.

	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/ExtraTrackDetailsPage.cs:
	* src/Core/Banshee.ThickClient/Makefile.am:
	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/LicenseEntry.cs:
	Add a combo entry for editing the LicenseURI field.

2009-03-23  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/PageNavigationEntry.cs:
	Set a tooltip on the next/arrow button, and make sure the title entry is
	focused after we switch tracks.

2009-03-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Clients/Booter/Booter/Entry.cs:
	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	* src/Core/Banshee.Services/Banshee.Query/BansheeQuery.cs:
	* src/Core/Banshee.Services/Banshee.SmartPlaylist/Migrator.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/StatisticsPage.cs:
	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmTrackInfo.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackInfo.cs:
	Patch from Brian Lucas and Alexander Kojevnikov adding a score
	column/field that is updated automatically based on how far a song was
	played before it was skipped (or over).  It has a value of 0 to 100, where